--- a/package.json
+++ b/package.json
@@ -5,16 +5,22 @@
   "license": "MIT",
   "scripts": {
     "start": "node index.js",
-    "watch": "nodemon index.js"
+    "watch": "nodemon index.js",
+    "swagger:generate": "node swagger.js",
+    "docker:build": "docker build .",
+    "docker:up": "docker compose up",
+    "start:full-cylce": "yarn swagger:generate && yarn docker:build && yarn docker:up"
   },
   "dependencies": {
     "@ngneat/falso": "^7.1.1",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "mongodb": "^6.3.0"
+    "mongodb": "^6.3.0",
+    "swagger-autogen": "^2.23.7"
   },
   "devDependencies": {
     "dotenv": "^16.4.1",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "swagger-ui-express": "^5.0.0"
   }
 }
